Navmenu geordend op Importance, Onleesbare "Contact"boxes gefixt

--- a/FrontendMonitoring/Components/Pages/About.razor
+++ b/FrontendMonitoring/Components/Pages/About.razor
@@ -103,7 +103,7 @@
 
     <MudDivider Class="my-6" />
 
-    <MudPaper Elevation="2" Class="responsive-padding text-center card-animate" Style="background: var(--mud-palette-primary-lighten);">
+    <MudPaper Elevation="2" Class="responsive-padding text-center card-animate" Style="background-color: var(--mud-palette-background-paper);">
         <MudIcon Icon="@Icons.Material.Filled.ContactMail" Style="font-size: 3rem; color: var(--mud-palette-primary);" Class="mb-3" />
         <MudText Typo="Typo.h5" Class="mb-3 text-responsive-h5">Neem Contact Op</MudText>
         <MudText Typo="Typo.body1" Class="mb-4 text-responsive-body">
