--- a/FrontendMonitoring/Components/Pages/HowItWorks.razor
+++ b/FrontendMonitoring/Components/Pages/HowItWorks.razor
@@ -110,7 +110,7 @@
 
     <MudDivider Class="my-6" />
 
-    <MudPaper Elevation="2" Class="responsive-padding text-center card-animate" Style="background: var(--mud-palette-primary-lighten);">
+    <MudPaper Elevation="2" Class="responsive-padding text-center card-animate" Style="background-color: var(--mud-palette-background-paper);">
         <MudText Typo="Typo.h5" Class="mb-3 text-responsive-h5">Klaar om te beginnen?</MudText>
         <MudText Typo="Typo.body1" Class="mb-4 text-responsive-body">
             Sluit je aan bij gemeenten wereldwijd bij het creëren van schonere, slimmere gemeenschappen met onze afvaldetectietechnologie.
