--- a/FrontendMonitoring/Components/Pages/Privacy.razor
+++ b/FrontendMonitoring/Components/Pages/Privacy.razor
@@ -127,7 +127,8 @@
 
     <MudDivider Class="my-6" />
 
-    <MudPaper Elevation="2" Class="responsive-padding card-animate" Style="background: var(--mud-palette-info-lighten);">        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-3">
+    <MudPaper Elevation="2" Class="responsive-padding text-center card-animate" Style="background-color: var(--mud-palette-background-paper);">
+        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mb-3">
             <MudIcon Icon="@Icons.Material.Filled.ContactMail" Style="color: var(--mud-palette-info);" />
             <MudText Typo="Typo.h5" Class="text-responsive-h5">Contacteer Ons</MudText>
         </MudStack>
