--- a/FrontendMonitoring/Components/Pages/Dashboard.razor
+++ b/FrontendMonitoring/Components/Pages/Dashboard.razor
@@ -76,6 +76,20 @@
                 <MudText Typo="Typo.h6" Class="text-responsive-h6">Afvalstromen</MudText>
                 <MudText Typo="Typo.body1" Class="text-responsive-body">Grafiek met trends komt hier...</MudText>
             </MudPaper>
+            <MudChart ChartType="ChartType.Bar" ChartSeries="@Series" XAxisLabels="@XAxisLabels" Width="100%" Height="350px">
+                <CustomGraphics>
+                    <style>
+                        .heavy {
+                            font: bold 30px Helvetica;
+                        }
+
+                        .Rrrrr {
+                            font: italic 40px Helvetica;
+                            fill: rgb(62,44,221);
+                        }
+                    </style>
+                </CustomGraphics>
+            </MudChart>
         </MudItem>
 
         <!-- Locaties (map) -->
@@ -212,6 +226,12 @@
         await JS.InvokeVoidAsync("downloadCsv", "detections.csv", csv.ToString());
     }
 
-
+    public List<ChartSeries> Series = new List<ChartSeries>()
+    {
+        new ChartSeries() { Name = "United States", Data = new double[] { 40, 20, 25, 27, 46, 60, 48, 80, 15 } },
+        new ChartSeries() { Name = "Germany", Data = new double[] { 19, 24, 35, 13, 28, 15, 13, 16, 31 } },
+        new ChartSeries() { Name = "Sweden", Data = new double[] { 8, 6, 11, 13, 4, 16, 10, 16, 18 } },
+    };
+    public string[] XAxisLabels = { "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep" };
 
 }
