--- a/FrontendMonitoring/Components/Pages/Home.razor
+++ b/FrontendMonitoring/Components/Pages/Home.razor
@@ -54,7 +54,8 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="12" md="6">
-            <MudPaper Elevation="2" Class="responsive-padding card-animate card-mobile-responsive mb-4 gradient-bg">
+            <MudPaper Elevation="2" Class="responsive-padding card-animate card-mobile-responsive mb-4 mud-elevation-2 pa-4">
+
                 <MudText Typo="Typo.h5" Class="mb-2 text-responsive-h5">Features</MudText>
                 <MudList T="string">
                     <MudListItem T="string" Class="text-responsive-body">Interactieve dashboard met live data</MudListItem>
